--- a/FameTreacker/FameTreacker/Features/Events/EventsView.xaml
+++ b/FameTreacker/FameTreacker/Features/Events/EventsView.xaml
@@ -5,7 +5,7 @@
              xmlns:resources="clr-namespace:FameTreacker.Core.Resources;assembly=FameTreacker"
              x:Class="FameTreacker.Features.Events.EventsView"
              Title="{x:Static resources:Strings.Events}"
-             IconImageSource="{OnPlatform iOS=events@3x.png, Android=ic_events}"
+             IconImageSource="{OnPlatform iOS=events.png, Android=ic_events}"
              BackgroundColor="#202020">
     <ContentPage.Content>
         <ScrollView>
