--- a/FameTreacker/FameTreacker/Features/Photos/PhotosView.xaml
+++ b/FameTreacker/FameTreacker/Features/Photos/PhotosView.xaml
@@ -5,7 +5,7 @@
              xmlns:resources="clr-namespace:FameTreacker.Core.Resources;assembly=FameTreacker"
              x:Class="FameTreacker.Features.Photos.PhotosView"
              Title="{x:Static resources:Strings.Photos}"
-             IconImageSource="{OnPlatform iOS=events@3x.png, Android=ic_events}"
+             IconImageSource="{OnPlatform iOS=photos.png, Android=ic_photos}"
              BackgroundColor="#202020">
     <ContentPage.Content>
         <ScrollView>
