--- a/FameTreacker/FameTreacker/Features/Videos/VideosView.xaml
+++ b/FameTreacker/FameTreacker/Features/Videos/VideosView.xaml
@@ -5,7 +5,7 @@
              xmlns:resources="clr-namespace:FameTreacker.Core.Resources;assembly=FameTreacker"
              x:Class="FameTreacker.Features.Videos.VideosView"
              Title="{x:Static resources:Strings.Videos}"
-             IconImageSource="{OnPlatform iOS=events@3x.png, Android=ic_events}"
+             IconImageSource="{OnPlatform iOS=videos.png, Android=ic_videos}"
              BackgroundColor="#202020">
     <ContentPage.Content>
         <ScrollView>
