--- a/FameTracker/FameTracker/Core/Layout/MainView.xaml
+++ b/FameTracker/FameTracker/Core/Layout/MainView.xaml
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>  
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"  
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"  
-            x:Class="FameTreacker.Core.Layout.MainView"  
+            x:Class="FameTracker.Core.Layout.MainView"  
             xmlns:androidSpecific="clr-namespace:Xamarin.Forms.PlatformConfiguration.AndroidSpecific;assembly=Xamarin.Forms.Core"
-            xmlns:dashboard="clr-namespace:FameTreacker.Features.Dashboard;assembly=FameTreacker"
-            xmlns:events="clr-namespace:FameTreacker.Features.Events;assembly=FameTreacker"
-            xmlns:tweets="clr-namespace:FameTreacker.Features.Tweets;assembly=FameTreacker"
-            xmlns:videos="clr-namespace:FameTreacker.Features.Videos;assembly=FameTreacker"
-            xmlns:photos="clr-namespace:FameTreacker.Features.Photos;assembly=FameTreacker"
+            xmlns:dashboard="clr-namespace:FameTracker.Features.Dashboard;assembly=FameTracker"
+            xmlns:events="clr-namespace:FameTracker.Features.Events;assembly=FameTracker"
+            xmlns:tweets="clr-namespace:FameTracker.Features.Tweets;assembly=FameTracker"
+            xmlns:videos="clr-namespace:FameTracker.Features.Videos;assembly=FameTracker"
+            xmlns:photos="clr-namespace:FameTracker.Features.Photos;assembly=FameTracker"
             BarTextColor="#F5F5F5"
             BarBackgroundColor="#202020"
             androidSpecific:TabbedPage.BarItemColor="#F5F5F5"
