--- a/FameTracker/FameTracker/Features/Photos/PhotosView.xaml
+++ b/FameTracker/FameTracker/Features/Photos/PhotosView.xaml
@@ -2,8 +2,8 @@
 
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:resources="clr-namespace:FameTreacker.Core.Resources;assembly=FameTreacker"
-             x:Class="FameTreacker.Features.Photos.PhotosView"
+             xmlns:resources="clr-namespace:FameTracker.Core.Resources;assembly=FameTracker"
+             x:Class="FameTracker.Features.Photos.PhotosView"
              Title="{x:Static resources:Strings.Photos}"
              IconImageSource="{OnPlatform iOS=photos.png, Android=ic_photos}"
              BackgroundColor="#202020">
