--- a/FameTracker/FameTracker/Features/Tweets/TweetsView.xaml
+++ b/FameTracker/FameTracker/Features/Tweets/TweetsView.xaml
@@ -2,8 +2,8 @@
 
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:resources="clr-namespace:FameTreacker.Core.Resources;assembly=FameTreacker"
-             x:Class="FameTreacker.Features.Tweets.TweetsView"
+             xmlns:resources="clr-namespace:FameTracker.Core.Resources;assembly=FameTracker"
+             x:Class="FameTracker.Features.Tweets.TweetsView"
              Title="{x:Static resources:Strings.Tweets}"
              IconImageSource="{OnPlatform iOS=tweets.png, Android=ic_tweets}"
              BackgroundColor="#202020">
