--- a/FameTracker/FameTracker/Features/Photos/PhotosView.xaml
+++ b/FameTracker/FameTracker/Features/Photos/PhotosView.xaml
@@ -11,9 +11,11 @@
         <ScrollView>
             <StackLayout>
                 <Grid>
-                    <Label Text="{x:Static resources:Strings.Photos}" FontSize="30" FontAttributes="Bold" HorizontalOptions="Center" VerticalOptions="Center" TextColor="#f5f5f5"/>
+                    <Label Text="{x:Static resources:Strings.Photos}" FontSize="30" FontAttributes="Bold"
+                           HorizontalOptions="Center" VerticalOptions="Center" TextColor="#f5f5f5" />
                 </Grid>
-                <StackLayout Padding="17" BackgroundColor="#161616" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+                <StackLayout Padding="17" BackgroundColor="#161616" VerticalOptions="FillAndExpand"
+                             HorizontalOptions="FillAndExpand">
                     <Label Text="New Photos" TextColor="#f5f5f5" HorizontalTextAlignment="Center"></Label>
                 </StackLayout>
             </StackLayout>
