--- a/FameTracker/FameTracker/App.xaml
+++ b/FameTracker/FameTracker/App.xaml
@@ -2,6 +2,7 @@
 
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:prism="http://prismlibrary.com"
              x:Class="FameTracker.App">
     <Application.Resources>
 
