--- a/FameTracker/FameTracker/Features/Twitter/TwitterView.xaml
+++ b/FameTracker/FameTracker/Features/Twitter/TwitterView.xaml
@@ -3,22 +3,47 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:resources="clr-namespace:FameTracker.Core.Resources;assembly=FameTracker"
+             xmlns:twitter="clr-namespace:FameTracker.Features.Twitter;assembly=FameTracker"
              x:Class="FameTracker.Features.Twitter.TwitterView"
              Title="{x:Static resources:Strings.Twitter}"
              IconImageSource="{OnPlatform iOS=twitter.png, Android=ic_twitter}"
              BackgroundColor="#202020">
     <ContentPage.Content>
-        <ScrollView>
-            <StackLayout>
-                <Grid>
-                    <Label Text="{x:Static resources:Strings.Twitter}" FontSize="30" FontAttributes="Bold"
-                           HorizontalOptions="Center" VerticalOptions="Center" Padding="5" TextColor="#f5f5f5" />
-                </Grid>
-                <StackLayout Padding="17" BackgroundColor="#161616" VerticalOptions="FillAndExpand"
-                             HorizontalOptions="FillAndExpand">
-                    <Label x:Name="Tweet_1" Text="New Twitter" TextColor="#f5f5f5" HorizontalTextAlignment="Center"></Label>
-                </StackLayout>
-            </StackLayout>
-        </ScrollView>
+        <RefreshView x:Name="RefreshView">
+            <CollectionView x:Name="EntriesList">
+                <CollectionView.EmptyView>
+                    <Grid VerticalOptions="FillAndExpand">
+                        <StackLayout Padding="16" VerticalOptions="Center">
+                            <Label HorizontalTextAlignment="Center" Text="{x:Static resources:Strings.NoTweets}"
+                                   TextColor="White" FontSize="Title" />
+                        </StackLayout>
+                    </Grid>
+                </CollectionView.EmptyView>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="twitter:Tweet">
+                        <Frame CornerRadius="7" Background="#242424" Padding="5">
+                            <Grid Background="#242424" Padding="5">
+                                
+                                <StackLayout Margin="5 ,0, 0, 0">
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="22"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+                                        
+                                        <Frame Padding="0" CornerRadius="20">
+                                            <Image Source="{Binding .ProfileImageUrl}" Aspect="AspectFill" VerticalOptions="FillAndExpand"/>
+                                        </Frame>
+                                        <Label Grid.Column="1" Text="{Binding .Username}" FontSize="Subtitle" FontAttributes="Bold" TextColor="White" />
+                                    </Grid>
+                                    <Label Text="{Binding .Text}" TextColor="White" />
+                                    <Label Text="{Binding .CreatedAt}" FontSize="12" TextColor="#bababa" />
+                                </StackLayout>
+                            </Grid>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </RefreshView>
     </ContentPage.Content>
 </ContentPage>
